--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@microsoft/signalr": "^9.0.6",
+    "@ng-bootstrap/ng-bootstrap": "^19.0.1",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.7",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.22.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -34,6 +39,7 @@
     "@angular/build": "^20.1.4",
     "@angular/cli": "^20.1.4",
     "@angular/compiler-cli": "^20.1.0",
+    "@angular/localize": "^20.1.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
