feat: implemnet map component

--- a/package.json
+++ b/package.json
@@ -26,10 +26,16 @@
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@bluehalo/ngx-leaflet": "github:asymmetrik/ngx-leaflet",
     "@microsoft/signalr": "^9.0.6",
     "@ng-bootstrap/ng-bootstrap": "^19.0.1",
     "@popperjs/core": "^2.11.8",
+    "@tailwindcss/postcss": "^4.1.12",
     "bootstrap": "^5.3.7",
+    "deck.gl": "^9.1.14",
+    "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.14.0",
+    "ngx-leaflet": "^0.0.16",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.22.3",
     "tslib": "^2.3.0",
@@ -41,12 +47,17 @@
     "@angular/compiler-cli": "^20.1.0",
     "@angular/localize": "^20.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.20",
+    "@types/mapbox-gl": "^3.4.1",
+    "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12",
     "typescript": "~5.8.2"
   }
 }
